--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,18 +40,18 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01157"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01157"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01158"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01158"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01157"/>
+    <link rel="stylesheet" href="src/play.css?v=01158"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01157"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01157"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01157"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01157"></script>
-    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01157"></script>
-    <script type="text/javascript" src="src/play.js?v=01157"></script>
+    <script type="text/javascript" src="src/common.js?v=01158"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01158"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01158"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01158"></script>
+    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01158"></script>
+    <script type="text/javascript" src="src/play.js?v=01158"></script>
     <script type="text/javascript">
       window.onload = async function() {
         //'use strict';
@@ -190,7 +190,7 @@
             <div class="swiper-slide non-white-bg list-">
               <div class="swiper-inner">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide" style="overflow-y: scroll;">
+                  <div class="swiper-slide" style="overflow-y: scroll; padding-bottom: 50px;">
 
                     <h2 class="h-offset">Ваши розыгрыши</h2>
                     <div id="drawings_list">
