--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,18 +40,18 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01273"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01273"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01274"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01274"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01273"/>
+    <link rel="stylesheet" href="src/play.css?v=01274"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01273"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01273"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01273"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01273"></script>
-    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01273"></script>
-    <script type="text/javascript" src="src/play.js?v=01273"></script>
+    <script type="text/javascript" src="src/common.js?v=01274"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01274"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01274"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01274"></script>
+    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01274"></script>
+    <script type="text/javascript" src="src/play.js?v=01274"></script>
     <script type="text/javascript">
       window.onload = async function() {
         //'use strict';
@@ -214,8 +214,8 @@
                         <p><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="modal_explain_chances_to_win()">Как работают шансы?</a></p>
                       </div>
 
-                      <h2 style="margin: 1.5em 0 0.3em 0" id="rating_header">⭐️ Ваш рейтинг</h2>
-                      <p id="rating_intro">Скоро здесь будет информация о вашем "рейтинге" &mdash; вашей вероятности побеждать в розыгрышах по отношению к другим участникам. На рейтинг влияют такие показатели, как: заполнили ли вы разделы "О вас" и "Ваши бренды", сколько раз подряд вы уже участвуете, давно ли вы не выигрывали, и т.д. Если вы постоянно участвуете, заполнили свой профиль, давно не выигрывали &mdash; то ваши шансы на выигрыш в ближайшее время будут самыми высокими, и наоборот.</p>
+                      <!--h2 style="margin: 1.5em 0 0.3em 0" id="rating_header">⭐️ Ваш рейтинг</h2>
+                      <p id="rating_intro">Скоро здесь будет информация о вашем "рейтинге" &mdash; вашей вероятности побеждать в розыгрышах по отношению к другим участникам. На рейтинг влияют такие показатели, как: заполнили ли вы разделы "О вас" и "Ваши бренды", сколько раз подряд вы уже участвуете, давно ли вы не выигрывали, и т.д. Если вы постоянно участвуете, заполнили свой профиль, давно не выигрывали &mdash; то ваши шансы на выигрыш в ближайшее время будут самыми высокими, и наоборот.</p-->
 
                       <h2 style="margin: 1.5em 0 0.3em 0;" id="past_header">История и аналитика</h2>
                       <div id="past">
