--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,18 +40,18 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01276"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01276"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01277"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01277"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01276"/>
+    <link rel="stylesheet" href="src/play.css?v=01277"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01276"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01276"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01276"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01276"></script>
-    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01276"></script>
-    <script type="text/javascript" src="src/play.js?v=01276"></script>
+    <script type="text/javascript" src="src/common.js?v=01277"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01277"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01277"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01277"></script>
+    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01277"></script>
+    <script type="text/javascript" src="src/play.js?v=01277"></script>
     <script type="text/javascript">
       window.onload = async function() {
         //'use strict';
@@ -247,16 +247,16 @@
                     <p id="fill_data"></p>
 
                     <ul class="nav nav-pills" id="myTab" role="tablist">
-                      <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">О вас</button>
-                      </li>
                       <li class="nav-item" role="presentation" id="brands">
-                        <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Бренды</button>
+                        <button class="nav-link active" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile-tab-pane" type="button" role="tab" aria-controls="profile-tab-pane" aria-selected="false">Бренды</button>
+                      </li>
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="home-tab" data-bs-toggle="tab" data-bs-target="#home-tab-pane" type="button" role="tab" aria-controls="home-tab-pane" aria-selected="true">О вас</button>
                       </li>
                     </ul>
                     <div class="tab-content" id="myTabContent">
-                      <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0"><div id="mini_app_settings"></div></div>
-                      <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"><div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div></div>
+                      <div class="tab-pane fade show active" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"><div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div></div>
+                      <div class="tab-pane fade" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0"><div id="mini_app_settings"></div></div>
                     </div>
 
                     <!--div class="accordion" id="accordionExample">
