--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,18 +40,18 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01277"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01277"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01278"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01278"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01277"/>
+    <link rel="stylesheet" href="src/play.css?v=01278"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01277"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01277"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01277"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01277"></script>
-    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01277"></script>
-    <script type="text/javascript" src="src/play.js?v=01277"></script>
+    <script type="text/javascript" src="src/common.js?v=01278"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01278"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01278"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01278"></script>
+    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01278"></script>
+    <script type="text/javascript" src="src/play.js?v=01278"></script>
     <script type="text/javascript">
       window.onload = async function() {
         //'use strict';
@@ -202,7 +202,7 @@
                       <h3>Сегодня</h3>
                       <div id="now"><p>Нет</p></div>
                       <div id="flipdown" class="flipdown"></div>
-                      <h3>Завтра (и до 1 февраля)</h3>
+                      <h3>Завтра</h3>
                       <div id="next"><p>Нет</p></div>
 
                       <h2 style="margin: 1.5em 0 0.3em 0">Шансы на выигрыш</h2>
